Fixed bug with flexbox layout expanding too much on mobile.

--- a/scss/_main/_layout.scss
+++ b/scss/_main/_layout.scss
@@ -37,7 +37,7 @@ body {
   -moz-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .page {
